# slydifi

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  HISTORY.md  HISTORY.rst  LICENSE  README-en.md  README-ja.md  README.md  README.rst  Satyristes  entrypoint.sh  enumitem.satyh  install.sh  satysfi-class-slydifi-doc.opam  satysfi-class-slydifi.opam  slydifi-blockless.satyh  slydifi-code-blockless.satyh  slydifi-color.satyh  slydifi-enumitem-blockless.satyh  slydifi.satyh
demo/: demo.saty  slide-blockless.saty  slide.saty  slydifi-theme-document.satyh
doc/: book.toml  slydifi-theme-document.satyh  slydifi.saty
doc/src/: SUMMARY.md
doc/src/code/making_theme/1_minimal/: my_simple_theme.satyh
doc/src/code/making_theme/2_add_config/: example.saty
doc/src/code/making_theme/3_slide_title/: my_simple_theme.satyh
doc/src/code/making_theme/5_inline-commands/: my_simple_theme.satyh
doc/src/making_theme/: 1_minimal.md  2_add_config.md  6_overlay.md  8_best_practice.md  index.md
example/: akasaka-user-config.saty  akasaka.saty  arctic-noto.saty  arctic.saty  example.saty  hakodate.saty  plain.saty
old/: slydifi-color.satyh  slydifi-enumitem.satyh  slydifi-footnote-scheme.satyh  slydifi.satyh
slydifi/: slydifi.satyh
slydifi/functions/: color.satyh  footnote.satyh
slydifi/theme/: akasaka.satyh  hakodate.satyh  plain.satyh
slydifi_book/src/: SUMMARY.md  index.md  install.md
slydifi_book/src/code/making_slides/: slide.saty
slydifi_book/src/code/making_theme/1_minimal/: example.saty
slydifi_book/src/code/making_theme/2_add_config/: my_simple_theme.satyh
slydifi_book/src/code/making_theme/3_slide_title/: example.saty
slydifi_book/src/code/making_theme/4_master_frame/: example.saty  my_simple_theme.satyh
slydifi_book/src/making_slides/: basic_slides.md  figures.md  index.md  overlay.md
slydifi_book/src/making_theme/: 1_minimal.md  3_slide_title.md  4_master_frame.md  5_inline_commands.md  7_header_footer.md
src/: crossref.satyh  frame.satyh  graphics.satyh  header.satyh  overlay.satyh  param.satyh  slydifi.satyh
src/functions/: enumitem.satyh  figbox.satyh  figurebox.satyh  overlay.satyh  param.satyh
src/slydifitheme/: akasaka.satyh
src/theme/: akasaka.satyh  arctic-noto.satyh  arctic.satyh  hakodate.satyh  plain.satyh
