opam-version: "2.0"
name: "satysfi-class-slydifi-doc"
version: "0.3.0"
synopsis: "A SATySFi document class for creating presentations slides"
description: """A SATySFi document class for creating presentations slides."""

maintainer: "Shinichi Mogami <mogassy@yahoo.co.jp>"
authors: "Shinichi Mogami <mogassy@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/monaqa/slydifi"
bug-reports: "https://github.com/monaqa/slydifi/issues"
dev-repo: "git+https://github.com/monaqa/slydifi.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-class-slydifi" {= "%{version}%"}
  "satysfi-easytable" {>= "1.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "class-slydifi-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "class-slydifi-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
