opam-version: "2.0"
name: "satysfi-class-slydifi"
version: "0.3.1"
synopsis: "A SATySFi document class for creating presentations slides"
description: """A SATySFi document class for creating presentations slides."""

maintainer: "Shinichi Mogami <mogassy@yahoo.co.jp>"
authors: "Shinichi Mogami <mogassy@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/monaqa/slydifi"
bug-reports: "https://github.com/monaqa/slydifi/issues"
dev-repo: "git+https://github.com/monaqa/slydifi.git"

depends: [
  "satysfi" {>= "0.0.6" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-enumitem" {>= "2.0.0"}
  "satysfi-figbox" {>= "0.1.3"}
  "satysfi-base" {>= "1.0.0"}
  "satysfi-railway" {>= "0.1.0"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "class-slydifi"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
